feat(egghead): implement tags management system with tRPC

--- a/apps/egghead/package.json
+++ b/apps/egghead/package.json
@@ -30,6 +30,7 @@
 		"@aws-sdk/client-s3": "^3.525.0",
 		"@aws-sdk/s3-request-presigner": "^3.441.0",
 		"@casl/ability": "^6.5.0",
+		"@codemirror/view": "^6.36.2",
 		"@coursebuilder/adapter-drizzle": "1.0.4",
 		"@coursebuilder/core": "1.0.6",
 		"@coursebuilder/next": "workspace:^",
@@ -47,6 +48,7 @@
 		"@coursebuilder/utils-ui": "1.0.0",
 		"@heroicons/react": "^2.0.18",
 		"@hookform/resolvers": "^3.3.2",
+		"@internationalized/date": "3.7.0",
 		"@mdx-js/loader": "^3.1.0",
 		"@mdx-js/react": "^3.1.0",
 		"@mux/mux-player-react": "^2.6.0",
@@ -72,6 +74,7 @@
 		"@types/mdx": "^2.0.13",
 		"@types/shortid": "^0.0.31",
 		"@types/uuid": "9.0.8",
+		"@uiw/react-markdown-editor": "^6.1.2",
 		"@uploadthing/react": "7.1.5",
 		"@upstash/ratelimit": "^1.0.1",
 		"@upstash/redis": "^1.28.4",
@@ -82,9 +85,12 @@
 		"date-fns": "^2.30.0",
 		"drizzle-orm": "0.36.0",
 		"framer-motion": "^12.0.0-alpha.1",
+		"google-auth-library": "^9.15.1",
+		"googleapis": "^148.0.0",
 		"human-readable-ids": "^1.0.4",
 		"inngest": "3.35.0",
 		"lucide-react": "^0.288.0",
+		"marked": "^15.0.12",
 		"memoize-one": "^6.0.0",
 		"nanoid": "^5.0.2",
 		"next": "15.4.2-canary.14",
@@ -126,8 +132,7 @@
 		"uuid": "^9.0.1",
 		"y-partykit": "^0.0.28",
 		"yjs": "^13.6.10",
-		"zod": "^3.22.4",
-		"@internationalized/date": "3.7.0"
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss": "^4.1.11",
