chore(egghead): fix typecheck errors

--- a/apps/egghead/package.json
+++ b/apps/egghead/package.json
@@ -31,21 +31,28 @@
 		"@aws-sdk/s3-request-presigner": "^3.441.0",
 		"@casl/ability": "^6.5.0",
 		"@codemirror/view": "^6.36.2",
-		"@coursebuilder/adapter-drizzle": "1.0.4",
-		"@coursebuilder/core": "1.0.6",
+		"@coursebuilder/adapter-drizzle": "workspace:*",
+		"@coursebuilder/commerce-next": "workspace:*",
+		"@coursebuilder/core": "workspace:*",
+		"@coursebuilder/email-templates": "workspace:*",
+		"@coursebuilder/mdx-mermaid": "workspace:*",
 		"@coursebuilder/next": "workspace:^",
 		"@coursebuilder/nodash": "workspace:^",
-		"@coursebuilder/ui": "^2.0.7",
-		"@coursebuilder/utils-ai": "1.0.1",
-		"@coursebuilder/utils-browser": "1.0.0",
-		"@coursebuilder/utils-core": "1.0.0",
-		"@coursebuilder/utils-email": "1.0.1",
-		"@coursebuilder/utils-file": "1.0.0",
-		"@coursebuilder/utils-media": "1.0.0",
-		"@coursebuilder/utils-search": "1.0.0",
-		"@coursebuilder/utils-seo": "1.0.0",
-		"@coursebuilder/utils-string": "1.0.0",
-		"@coursebuilder/utils-ui": "1.0.0",
+		"@coursebuilder/ui": "workspace:*",
+		"@coursebuilder/utils-ai": "workspace:*",
+		"@coursebuilder/utils-auth": "workspace:*",
+		"@coursebuilder/utils-aws": "workspace:*",
+		"@coursebuilder/utils-browser": "workspace:*",
+		"@coursebuilder/utils-core": "workspace:*",
+		"@coursebuilder/utils-email": "workspace:*",
+		"@coursebuilder/utils-file": "workspace:*",
+		"@coursebuilder/utils-media": "workspace:*",
+		"@coursebuilder/utils-resource": "workspace:*",
+		"@coursebuilder/utils-search": "workspace:*",
+		"@coursebuilder/utils-seo": "workspace:*",
+		"@coursebuilder/utils-string": "workspace:*",
+		"@coursebuilder/utils-timezones": "workspace:*",
+		"@coursebuilder/utils-ui": "workspace:*",
 		"@heroicons/react": "^2.0.18",
 		"@hookform/resolvers": "^3.3.2",
 		"@internationalized/date": "3.7.0",
@@ -96,6 +103,7 @@
 		"next": "15.4.2-canary.14",
 		"next-auth": "5.0.0-beta.25",
 		"next-axiom": "1.9.1",
+		"next-cloudinary": "^6.5.1",
 		"next-themes": "^0.3",
 		"nodemailer": "^6.7.2",
 		"nuqs": "^2.2.3",
