--- a/apps/egghead/package.json
+++ b/apps/egghead/package.json
@@ -30,7 +30,7 @@
 		"@aws-sdk/client-s3": "^3.525.0",
 		"@aws-sdk/s3-request-presigner": "^3.441.0",
 		"@casl/ability": "^6.5.0",
-		"@codemirror/view": "^6.36.2",
+		"@codemirror/view": "6.36.5",
 		"@coursebuilder/adapter-drizzle": "workspace:*",
 		"@coursebuilder/commerce-next": "workspace:*",
 		"@coursebuilder/core": "workspace:*",
