--- a/apps/egghead/package.json
+++ b/apps/egghead/package.json
@@ -29,6 +29,7 @@
 		"@auth/core": "0.37.2",
 		"@aws-sdk/client-s3": "^3.525.0",
 		"@aws-sdk/s3-request-presigner": "^3.441.0",
+		"@axiomhq/js": "^1.3.1",
 		"@casl/ability": "^6.5.0",
 		"@codemirror/view": "^6.36.2",
 		"@coursebuilder/adapter-drizzle": "workspace:*",
