chore: revert vscode settings

--- a/apps/epicdev-ai/.vscode/settings.json
+++ b/apps/epicdev-ai/.vscode/settings.json
@@ -1,7 +1,4 @@
 {
 	"typescript.tsdk": "node_modules/typescript/lib",
-	"cSpell.words": ["coursebuilder"],
-	"workbench.colorCustomizations": {
-		"activityBar.activeBorder": "#1D1830"
-	}
+	"cSpell.words": ["coursebuilder"]
 }
