--- a/apps/astro-party/package.json
+++ b/apps/astro-party/package.json
@@ -18,7 +18,8 @@
 		"lint": "eslint .",
 		"start": "next start",
 		"typecheck": "tsc --noEmit",
-		"coupons": "dotenv tsx src/scripts/bootstrap-basic-coupons.ts"
+		"coupons": "dotenv tsx src/scripts/bootstrap-basic-coupons.ts",
+		"test": "vitest run -c vitest.config.ts"
 	},
 	"dependencies": {
 		"@ai-sdk/openai": "^1.3.6",
@@ -235,7 +236,8 @@
 		"tailwindcss": "^4.1.11",
 		"ts-node": "^10.9.2",
 		"tsx": "^4.7.1",
-		"typescript": "5.4.5"
+		"typescript": "5.4.5",
+		"vite-tsconfig-paths": "^5.1.4"
 	},
 	"ct3aMetadata": {
 		"initVersion": "7.22.0"
