--- a/apps/ai-hero/package.json
+++ b/apps/ai-hero/package.json
@@ -212,12 +212,13 @@
 	},
 	"devDependencies": {
 		"@clack/prompts": "^0.6.3",
+		"@coursebuilder/eslint-config": "workspace:*",
 		"@eslint/eslintrc": "^3.3.1",
 		"@mux/mux-node": "^7.3.2",
 		"@tailwindcss/postcss": "^4.1.11",
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/base-64": "^1.0.1",
-		"@types/eslint": "^8.44.2",
+		"@types/eslint": "^9.6.1",
 		"@types/js-cookie": "^3.0.6",
 		"@types/json-schema": "^7.0.14",
 		"@types/node": "^20.12.5",
@@ -233,7 +234,7 @@
 		"drizzle-kit": "0.27.1",
 		"drizzle-orm": "0.36.0",
 		"encoding": "^0.1.13",
-		"eslint": "^8.47.0",
+		"eslint": "^9.37.0",
 		"eslint-config-next": "16.0.0-beta.0",
 		"msw": "^2.7.0",
 		"mysql2": "^3.6.1",
@@ -249,6 +250,7 @@
 		"tsx": "^4.7.1",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "5.4.5",
+		"typescript-eslint": "^8.46.0",
 		"vite-tsconfig-paths": "^5.1.4"
 	},
 	"ct3aMetadata": {
