--- a/apps/astro-party/package.json
+++ b/apps/astro-party/package.json
@@ -204,11 +204,12 @@
 		"zustand": "^4.4.7"
 	},
 	"devDependencies": {
+		"@coursebuilder/eslint-config": "workspace:*",
 		"@mux/mux-node": "^7.3.2",
 		"@tailwindcss/postcss": "^4.1.11",
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/base-64": "^1.0.1",
-		"@types/eslint": "^8.44.2",
+		"@types/eslint": "^9.6.1",
 		"@types/js-cookie": "^3.0.6",
 		"@types/json-schema": "^7.0.14",
 		"@types/mjml": "^4.7.4",
@@ -223,7 +224,7 @@
 		"dotenv-cli": "^7.3.0",
 		"drizzle-kit": "0.27.1",
 		"encoding": "^0.1.13",
-		"eslint": "^8.47.0",
+		"eslint": "^9.37.0",
 		"eslint-config-next": "16.0.0-beta.0",
 		"mysql2": "^3.6.1",
 		"partykit": "0.0.104",
@@ -237,6 +238,7 @@
 		"ts-node": "^10.9.2",
 		"tsx": "^4.7.1",
 		"typescript": "5.4.5",
+		"typescript-eslint": "^8.46.0",
 		"vite-tsconfig-paths": "^5.1.4"
 	},
 	"ct3aMetadata": {
