--- a/apps/egghead/package.json
+++ b/apps/egghead/package.json
@@ -144,6 +144,7 @@
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
+		"@coursebuilder/eslint-config": "workspace:*",
 		"@tailwindcss/postcss": "^4.1.11",
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/node": "^20.12.5",
@@ -163,7 +164,8 @@
 		"prettier-plugin-tailwindcss": "^0.6.14",
 		"tailwindcss": "^4.1.11",
 		"tsx": "^4.7.1",
-		"typescript": "5.4.5"
+		"typescript": "5.4.5",
+		"typescript-eslint": "^8.46.0"
 	},
 	"ct3aMetadata": {
 		"initVersion": "7.22.0"
