--- a/apps/epicdev-ai/package.json
+++ b/apps/epicdev-ai/package.json
@@ -217,10 +217,11 @@
 	},
 	"devDependencies": {
 		"@clack/prompts": "^0.6.3",
+		"@coursebuilder/eslint-config": "workspace:*",
 		"@mux/mux-node": "^7.3.2",
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/base-64": "^1.0.1",
-		"@types/eslint": "^8.44.2",
+		"@types/eslint": "^9.6.1",
 		"@types/js-cookie": "^3.0.6",
 		"@types/json-schema": "^7.0.14",
 		"@types/node": "^20.12.5",
@@ -237,7 +238,7 @@
 		"drizzle-kit": "0.27.1",
 		"drizzle-orm": "0.36.0",
 		"encoding": "^0.1.13",
-		"eslint": "^8.47.0",
+		"eslint": "^9.37.0",
 		"eslint-config-next": "16.0.0-beta.0",
 		"msw": "^2.7.0",
 		"mysql2": "^3.6.1",
@@ -253,6 +254,7 @@
 		"ts-node": "^10.9.2",
 		"tsx": "^4.7.1",
 		"typescript": "5.4.5",
+		"typescript-eslint": "^8.46.0",
 		"vite-tsconfig-paths": "^5.1.4",
 		"vitest": "1.6.0"
 	},
