--- a/apps/ai-hero/package.json
+++ b/apps/ai-hero/package.json
@@ -18,6 +18,7 @@
 		"db:migrate": "dotenv drizzle-kit migrate",
 		"db:introspect": "dotenv drizzle-kit introspect",
 		"lint": "eslint .",
+		"lint:fix": "eslint . --fix",
 		"start": "next start",
 		"typecheck": "tsc --noEmit",
 		"index-typesense": "tsx ./scripts/index-content.ts",
@@ -250,7 +251,6 @@
 		"tsx": "^4.7.1",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "5.4.5",
-		"typescript-eslint": "^8.46.0",
 		"vite-tsconfig-paths": "^5.1.4"
 	},
 	"ct3aMetadata": {
