--- a/apps/epic-react/package.json
+++ b/apps/epic-react/package.json
@@ -119,8 +119,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.14",
 		"tailwindcss": "^4.1.11",
 		"tsx": "^4.7.1",
-		"typescript": "5.4.5",
-		"typescript-eslint": "^8.46.0"
+		"typescript": "5.4.5"
 	},
 	"ct3aMetadata": {
 		"initVersion": "7.22.0"
