--- a/apps/go-local-first/package.json
+++ b/apps/go-local-first/package.json
@@ -258,8 +258,7 @@
 		"tailwindcss": "^4.1.11",
 		"tailwindcss-fluid-typography": "^1.0.5",
 		"tsx": "^4.7.1",
-		"typescript": "5.4.5",
-		"typescript-eslint": "^8.46.0"
+		"typescript": "5.4.5"
 	},
 	"ct3aMetadata": {
 		"initVersion": "7.22.0"
