--- a/packages/commerce-next/package.json
+++ b/packages/commerce-next/package.json
@@ -69,8 +69,8 @@
 		"react": "19.2.0"
 	},
 	"peerDependencies": {
-		"next": "^15",
-		"react": "19.1.0"
+		"next": "16.0.0-beta.0",
+		"react": "19.2.0"
 	},
 	"dependencies": {
 		"@auth/core": "0.37.2",
