--- a/apps/code-with-antonio/package.json
+++ b/apps/code-with-antonio/package.json
@@ -80,6 +80,7 @@
 		"@headlessui/react": "^1.6.1",
 		"@heroicons/react": "^2.0.18",
 		"@hookform/resolvers": "^3.3.2",
+		"@inngest/realtime": "^0.4.4",
 		"@internationalized/date": "3.7.0",
 		"@lezer/highlight": "^1.2.1",
 		"@mdx-js/loader": "^3.1.0",
@@ -141,7 +142,7 @@
 		"human-readable-ids": "^1.0.4",
 		"i": "^0.3.7",
 		"import-in-the-middle": "^1.11.2",
-		"inngest": "3.35.0",
+		"inngest": "3.44.2",
 		"intl-segmenter-polyfill": "^0.4.4",
 		"js-cookie": "^3.0.5",
 		"json-schema": "^0.4.0",
