--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -136,6 +136,7 @@
 		"@anthropic-ai/sdk": "^0.17.1",
 		"@coursebuilder/email-templates": "^1.0.6",
 		"@coursebuilder/nodash": "workspace:^",
+		"@inngest/realtime": "^0.4.4",
 		"@react-email/components": "0.0.27",
 		"@slack/web-api": "^7.0.4",
 		"@types/cookie": "0.6.0",
@@ -144,7 +145,7 @@
 		"cookie": "0.6.0",
 		"date-fns": "^2.30.0",
 		"drizzle-zod": "^0.5.1",
-		"inngest": "3.35.0",
+		"inngest": "3.44.2",
 		"liquidjs": "^10.16.3",
 		"nodemailer": "^6.7.2",
 		"openai-edge": "^1.2.2",
