--- a/apps/code-with-antonio/.env.development
+++ b/apps/code-with-antonio/.env.development
@@ -9,6 +9,8 @@ NEXT_PUBLIC_PARTNER_LAST_NAME="with Antonio"
 NEXT_PUBLIC_PARTNER_TWITTER=YTCodeAntonio
 NEXT_PUBLIC_SEO_KEYWORDS="AI, artificial intelligence, typescript, LLM, large language model, prompt engineering, prompt engineering for developers"
 NEXT_PUBLIC_PRODUCT_DESCRIPTION="Build something great!"
+NEXT_PUBLIC_ENABLE_REALTIME_VIDEO_UPLOAD="true"
+
 
 # App Features
 CREATE_USER_ON_LOGIN=true
