style(cwa): cohorts

--- a/apps/code-with-antonio/.env.development
+++ b/apps/code-with-antonio/.env.development
@@ -4,8 +4,8 @@
 NEXT_PUBLIC_APP_NAME=code-with-antonio
 NEXT_PUBLIC_SITE_TITLE="Code with Antonio"
 NEXT_PUBLIC_SUPPORT_EMAIL=team@codewithantonio.com
-NEXT_PUBLIC_PARTNER_FIRST_NAME=Code
-NEXT_PUBLIC_PARTNER_LAST_NAME="with Antonio"
+NEXT_PUBLIC_PARTNER_FIRST_NAME=Antonio
+NEXT_PUBLIC_PARTNER_LAST_NAME="Code with Antonio"
 NEXT_PUBLIC_PARTNER_TWITTER=YTCodeAntonio
 NEXT_PUBLIC_SEO_KEYWORDS="AI, artificial intelligence, typescript, LLM, large language model, prompt engineering, prompt engineering for developers"
 NEXT_PUBLIC_PRODUCT_DESCRIPTION="Build something great!"
@@ -13,7 +13,7 @@ NEXT_PUBLIC_PRODUCT_DESCRIPTION="Build something great!"
 # App Features
 CREATE_USER_ON_LOGIN=true
 LOG_VERIFICATION_URL=true
-SKIP_EMAIL=true
+SKIP_EMAIL=false
 SKIP_CK_TAGGING=true
 DEFAULT_COUNTRY=US
 
