chore: bump next from beta to stable

--- a/apps/go-local-first/package.json
+++ b/apps/go-local-first/package.json
@@ -81,8 +81,8 @@
 		"@mdx-js/react": "^3.1.0",
 		"@msgpack/msgpack": "3.0.0-beta2",
 		"@mux/mux-player-react": "^3.6.1",
-		"@next/mdx": "16.0.0-beta.0",
-		"@next/third-parties": "16.0.0-beta.0",
+		"@next/mdx": "16.0.0",
+		"@next/third-parties": "16.0.0",
 		"@pinecone-database/pinecone": "^2.1.0",
 		"@planetscale/database": "1.19.0",
 		"@radix-ui/colors": "^3.0.0",
@@ -161,7 +161,7 @@
 		"memoize-one": "^6.0.0",
 		"mjml": "^4.15.3",
 		"nanoid": "^5.0.2",
-		"next": "16.0.0-beta.0",
+		"next": "16.0.0",
 		"next-auth": "5.0.0-beta.25",
 		"next-axiom": "1.9.1",
 		"next-cloudinary": "^6.5.1",
@@ -246,7 +246,7 @@
 		"drizzle-kit": "0.27.1",
 		"encoding": "^0.1.13",
 		"eslint": "^9.37.0",
-		"eslint-config-next": "16.0.0-beta.0",
+		"eslint-config-next": "16.0.0",
 		"mysql2": "^3.6.1",
 		"partykit": "0.0.104",
 		"postcss": "^8.4.47",
