--- a/apps/egghead/package.json
+++ b/apps/egghead/package.json
@@ -60,7 +60,7 @@
 		"@mdx-js/loader": "^3.1.0",
 		"@mdx-js/react": "^3.1.0",
 		"@mux/mux-player-react": "^3.6.1",
-		"@next/mdx": "16.0.0-beta.0",
+		"@next/mdx": "16.0.0",
 		"@planetscale/database": "1.19.0",
 		"@radix-ui/react-dialog": "1.1.2",
 		"@radix-ui/react-separator": "^1.1.0",
@@ -101,7 +101,7 @@
 		"marked": "^15.0.12",
 		"memoize-one": "^6.0.0",
 		"nanoid": "^5.0.2",
-		"next": "16.0.0-beta.0",
+		"next": "16.0.0",
 		"next-auth": "5.0.0-beta.25",
 		"next-axiom": "1.9.1",
 		"next-cloudinary": "^6.5.1",
