--- a/apps/epic-react/package.json
+++ b/apps/epic-react/package.json
@@ -43,7 +43,7 @@
 		"@mdx-js/mdx": "^3.1.0",
 		"@mdx-js/react": "^3.1.0",
 		"@mux/mux-player-react": "^3.6.1",
-		"@next/mdx": "16.0.0-beta.0",
+		"@next/mdx": "16.0.0",
 		"@planetscale/database": "1.19.0",
 		"@react-email/components": "0.0.27",
 		"@react-email/markdown": "^0.0.11",
@@ -72,7 +72,7 @@
 		"lucide-react": "^0.288.0",
 		"mysql2": "^3.6.1",
 		"nanoid": "^5.0.2",
-		"next": "16.0.0-beta.0",
+		"next": "16.0.0",
 		"next-auth": "5.0.0-beta.25",
 		"next-axiom": "1.9.1",
 		"next-themes": "^0.3",
