--- a/packages/commerce-next/package.json
+++ b/packages/commerce-next/package.json
@@ -65,11 +65,11 @@
 		"@types/uuid": "9.0.8",
 		"bunchee": "^5.1.2",
 		"esbuild-react18-useclient": "^1.0.7",
-		"next": "16.0.0-beta.0",
+		"next": "16.0.0",
 		"react": "19.2.0"
 	},
 	"peerDependencies": {
-		"next": "16.0.0-beta.0",
+		"next": "16.0.0",
 		"react": "19.2.0"
 	},
 	"dependencies": {
