--- a/packages/config/eslint-config/package.json
+++ b/packages/config/eslint-config/package.json
@@ -6,7 +6,7 @@
 	"dependencies": {
 		"@coursebuilder/eslint-plugin": "workspace:*",
 		"@eslint/js": "^9.37.0",
-		"@next/eslint-plugin-next": "^16.0.0-beta.0",
+		"@next/eslint-plugin-next": "^16.0.0",
 		"@types/eslint": "^9.6.1",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-import": "^2.29.0",
