--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -39,12 +39,12 @@
 	},
 	"devDependencies": {
 		"@auth/core": "0.37.2",
-		"next": "16.0.0-beta.0",
+		"next": "16.0.0",
 		"next-auth": "5.0.0-beta.25",
 		"react": "19.2.0"
 	},
 	"peerDependencies": {
-		"next": "16.0.0-beta.0",
+		"next": "16.0.0",
 		"next-auth": "5.0.0-beta.25",
 		"react": "19.2.0"
 	}
