--- a/apps/craft-of-ui/tsconfig.json
+++ b/apps/craft-of-ui/tsconfig.json
@@ -33,7 +33,8 @@
 		"**/*.cjs",
 		"**/*.mjs",
 		".next/types/**/*.ts",
-		"./node_modules/y-codemirror.next/dist/src/index.d.ts"
+		"./node_modules/y-codemirror.next/dist/src/index.d.ts",
+		".next/dev/types/**/*.ts"
 	],
 	"exclude": ["node_modules"]
 }
