--- a/apps/craft-of-ui/package.json
+++ b/apps/craft-of-ui/package.json
@@ -172,8 +172,9 @@
 		"react-hook-form": "^7.48.0",
 		"react-hot-toast": "^2.4.1",
 		"react-icons": "^4.11.0",
-		"react-instantsearch": "7.14",
-		"react-instantsearch-nextjs": "0.4",
+		"react-instantsearch": "~7.16.3",
+		"react-instantsearch-core": "^7.16.3",
+		"react-instantsearch-nextjs": "~1.0.2",
 		"react-markdown": "9.0.3",
 		"react-resizable-panels": "^2.1.7",
 		"react-stately": "^3.33.0",
@@ -196,7 +197,7 @@
 		"tailwindcss-radix": "^4.0.2",
 		"tiny-invariant": "^1.3.1",
 		"typesense": "^1.8.2",
-		"typesense-instantsearch-adapter": "^2.8.0",
+		"typesense-instantsearch-adapter": "^2.9.0",
 		"unified": "^11.0.5",
 		"uploadthing": "7.4.4",
 		"uuid": "^9.0.1",
