--- a/apps/egghead/package.json
+++ b/apps/egghead/package.json
@@ -118,8 +118,9 @@
 		"react-gravatar": "^2.6.3",
 		"react-hook-form": "^7.48.0",
 		"react-hot-toast": "^2.4.1",
-		"react-instantsearch": "7.14",
-		"react-instantsearch-nextjs": "0.4",
+		"react-instantsearch": "~7.16.3",
+		"react-instantsearch-core": "^7.16.3",
+		"react-instantsearch-nextjs": "~1.0.2",
 		"react-instantsearch-router-nextjs": "7.14",
 		"react-markdown": "9.0.3",
 		"react-wrap-balancer": "^0.2.4",
@@ -136,7 +137,7 @@
 		"tailwindcss-radix": "^4.0.2",
 		"tiny-invariant": "^1.3.1",
 		"typesense": "^1.8.2",
-		"typesense-instantsearch-adapter": "^2.8.0",
+		"typesense-instantsearch-adapter": "^2.9.0",
 		"uploadthing": "7.4.4",
 		"uuid": "^9.0.1",
 		"y-partykit": "^0.0.28",
