feat(aih): survey rig

--- a/apps/ai-hero/package.json
+++ b/apps/ai-hero/package.json
@@ -61,6 +61,7 @@
 		"@coursebuilder/mdx-mermaid": "workspace:*",
 		"@coursebuilder/next": "workspace:^",
 		"@coursebuilder/nodash": "workspace:^",
+		"@coursebuilder/survey": "workspace:*",
 		"@coursebuilder/ui": "workspace:*",
 		"@coursebuilder/utils-ai": "workspace:*",
 		"@coursebuilder/utils-auth": "workspace:*",
@@ -128,6 +129,7 @@
 		"cmdk": "^0.2.0",
 		"codehike": "^1.0.4",
 		"codemirror": "^6.0.1",
+		"cookie": "0.6.0",
 		"cookies-next": "^5.1.0",
 		"crypto": "^1.0.1",
 		"date-fns": "^2.30.0",
@@ -220,6 +222,7 @@
 		"@tailwindcss/postcss": "^4.1.11",
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/base-64": "^1.0.1",
+		"@types/cookie": "0.6.0",
 		"@types/eslint": "^9.6.1",
 		"@types/js-cookie": "^3.0.6",
 		"@types/json-schema": "^7.0.14",
