--- a/packages/survey/package.json
+++ b/packages/survey/package.json
@@ -26,12 +26,14 @@
 		"@xstate/react": "^4.1.1",
 		"date-fns": "^2.30.0",
 		"lodash": "^4.17.21",
-		"react": "19.2.0",
-		"react-dom": "19.2.0",
 		"react-hook-form": "^7.48.0",
 		"react-markdown": "9.0.3",
 		"xstate": "^5.13.0",
 		"zod": "^3.22.4"
+	},
+	"peerDependencies": {
+		"react": "19.0.0",
+		"react-dom": "19.0.0"
 	},
 	"devDependencies": {
 		"@types/date-fns": "^2.6.3",
