chore(survey): remove test scripts from package.json and retain typecheck script

--- a/packages/survey/package.json
+++ b/packages/survey/package.json
@@ -16,9 +16,7 @@
 	"scripts": {
 		"build": "tsup",
 		"dev": "tsup --watch",
-		"typecheck": "tsc --noEmit",
-		"test": "vitest run",
-		"test:watch": "vitest"
+		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
 		"@coursebuilder/ui": "workspace:*",
