fix(deps): update React and React DOM to version 19.2.0 in pnpm-lock and package.json, ensuring compatibility with other dependencies

--- a/packages/survey/package.json
+++ b/packages/survey/package.json
@@ -38,6 +38,8 @@
 		"@types/lodash": "^4.14.200",
 		"@types/react": "19.2.2",
 		"@types/react-dom": "19.2.1",
+		"react": "19.2.0",
+		"react-dom": "19.2.0",
 		"tsup": "8.0.2",
 		"typescript": "5.4.5",
 		"vitest": "1.6.0"
