--- a/packages/survey/tsconfig.json
+++ b/packages/survey/tsconfig.json
@@ -13,7 +13,7 @@
 		"isolatedModules": true,
 		"jsx": "react-jsx",
 		"module": "ESNext",
-		"moduleResolution": "node",
+		"moduleResolution": "bundler",
 		"skipDefaultLibCheck": true,
 		"skipLibCheck": true,
 		"strict": true,
