--- a/packages/survey/package.json
+++ b/packages/survey/package.json
@@ -7,6 +7,11 @@
 			"types": "./dist/index.d.ts",
 			"import": "./dist/index.js",
 			"default": "./dist/index.js"
+		},
+		"./types": {
+			"types": "./dist/types.d.ts",
+			"import": "./dist/types.js",
+			"default": "./dist/types.js"
 		}
 	},
 	"files": [
