feat: update product description and enhance instructor component
- Changed the product description in the development environment to emphasize AI.
- Updated the image source in the config file for better clarity.
- Enhanced the Instructor component with a new image and updated text for improved presentation.
- Refactored the Home page to include the Instructor component and adjusted layout for better content display.
- Made minor styling adjustments to the PrimaryNewsletterCta component for consistency.

--- a/apps/dev-build/.env.development
+++ b/apps/dev-build/.env.development
@@ -8,7 +8,7 @@ NEXT_PUBLIC_PARTNER_FIRST_NAME="John"
 NEXT_PUBLIC_PARTNER_LAST_NAME="Lindquist"
 NEXT_PUBLIC_PARTNER_TWITTER="johnlindquist"
 NEXT_PUBLIC_SEO_KEYWORDS="AI, artificial intelligence, typescript, LLM, large language model, prompt engineering, prompt engineering for developers"
-NEXT_PUBLIC_PRODUCT_DESCRIPTION="Your fast track to building with Cursor IDE"
+NEXT_PUBLIC_PRODUCT_DESCRIPTION="Your fast track to building with AI"
 
 # App Features
 CREATE_USER_ON_LOGIN=true
