feat(aih): implement persistent checkbox component with IndexedDB storage

--- a/apps/ai-hero/package.json
+++ b/apps/ai-hero/package.json
@@ -134,6 +134,8 @@
 		"crypto": "^1.0.1",
 		"date-fns": "^2.30.0",
 		"date-fns-tz": "^2.0.1",
+		"dexie": "^4.2.1",
+		"dexie-react-hooks": "^4.2.0",
 		"dotenv-flow": "^4.1.0",
 		"feed": "^4.2.2",
 		"formik": "2.2.9",
