feat(dev): integrate Motion Plus for enhanced animations and UI components, including new SplitText component and updates to CI workflows for token management

--- a/.github/workflows/apps.yaml
+++ b/.github/workflows/apps.yaml
@@ -33,6 +33,8 @@ jobs:
 
       - name: Setup
         uses: ./tooling/gh-actions/setup
+        with:
+          motion-plus-token: ${{ secrets.MOTION_PLUS_TOKEN }}
 
       - name: Build Course Builder packages
         run: pnpm build --filter "@coursebuilder/*"
