--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,6 @@ on:
       - main
   pull_request:
 
-
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: ${{ github.ref != 'refs/heads/master' }}
@@ -28,6 +27,8 @@ jobs:
 
       - name: Setup
         uses: ./tooling/gh-actions/setup
+        with:
+          motion-plus-token: ${{ secrets.MOTION_PLUS_TOKEN }}
 
       - name: Build
         run: pnpm turbo build --filter "./packages/*"
@@ -35,7 +36,7 @@ jobs:
         run: pnpm test
         env:
           NODE_ENV: test
-          DATABASE_URL: "file::memory:?cache=shared"
+          DATABASE_URL: 'file::memory:?cache=shared'
 
   lint:
     runs-on: ubuntu-latest
@@ -46,6 +47,8 @@ jobs:
 
       - name: Setup
         uses: ./tooling/gh-actions/setup
+        with:
+          motion-plus-token: ${{ secrets.MOTION_PLUS_TOKEN }}
 
       - name: Lint
         run: pnpm lint
@@ -59,6 +62,8 @@ jobs:
 
       - name: Setup
         uses: ./tooling/gh-actions/setup
+        with:
+          motion-plus-token: ${{ secrets.MOTION_PLUS_TOKEN }}
 
       - name: Format
         run: pnpm format:check
@@ -72,6 +77,8 @@ jobs:
 
       - name: Setup
         uses: ./tooling/gh-actions/setup
+        with:
+          motion-plus-token: ${{ secrets.MOTION_PLUS_TOKEN }}
 
       - name: Typecheck
         run: pnpm typecheck
