--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,6 +9,7 @@ permissions: write-all
 env:
   TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
   TURBO_TEAM: ${{ vars.TURBO_TEAM }}
+  MOTION_PLUS_TOKEN: ${{ secrets.MOTION_PLUS_TOKEN }}
 
 jobs:
   release:
@@ -52,8 +53,8 @@ jobs:
         id: changeset
         uses: changesets/action@v1
         with:
-          commit: "chore(release): 📦 version packages"
-          title: "chore(release): 📦  version packages"
+          commit: 'chore(release): 📦 version packages'
+          title: 'chore(release): 📦  version packages'
           publish: npx changeset publish
         env:
           GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
