--- a/apps/ai-hero/package.json
+++ b/apps/ai-hero/package.json
@@ -140,6 +140,8 @@
 		"feed": "^4.2.2",
 		"formik": "2.2.9",
 		"framer-motion": "^12.0.0-alpha.1",
+		"google-auth-library": "^9.15.1",
+		"googleapis": "^148.0.0",
 		"groq": "^3.18.1",
 		"holy-loader": "^2.2.10",
 		"human-readable-ids": "^1.0.4",
@@ -151,6 +153,7 @@
 		"json-schema": "^0.4.0",
 		"liquidjs": "^10.16.3",
 		"lucide-react": "^0.288.0",
+		"marked": "^15.0.12",
 		"memoize-one": "^6.0.0",
 		"mjml": "^4.15.3",
 		"nanoid": "^5.0.2",
