chore: add SUPPORT_WEBHOOK_SECRET to turbo.json env

--- a/turbo.json
+++ b/turbo.json
@@ -70,7 +70,8 @@
 				"SLACK_TOKEN",
 				"SLACK_DEFAULT_CHANNEL_ID",
 				"GOOG_CALENDAR_IMPERSONATE_USER",
-				"GOOG_CREDENTIALS_JSON"
+				"GOOG_CREDENTIALS_JSON",
+				"SUPPORT_WEBHOOK_SECRET"
 			],
 			"outputLogs": "new-only"
 		},
