refactor(turbo): improve cache efficiency and task configuration
- Move .env file patterns from globalDependencies to build task inputs
- Add typecheck outputs for incremental tsbuildinfo caching
- Enable test task caching by removing cache: false
- Add lint and typecheck scripts to @coursebuilder/ui package
- Move root dependencies to devDependencies

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,6 +7,10 @@
 	"author": "",
 	"main": "index.tsx",
 	"types": "index.tsx",
+	"scripts": {
+		"lint": "eslint .",
+		"typecheck": "tsc --noEmit"
+	},
 	"dependencies": {
 		"@auth/core": "0.37.2",
 		"@codemirror/commands": "^6.6.0",
