--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 			"prettier --write --list-different"
 		]
 	},
-	"dependencies": {
+	"devDependencies": {
 		"@changesets/changelog-github": "^0.5.0",
 		"@changesets/cli": "^2.27.1",
 		"@coursebuilder/eslint-config": "^0.1.0",
