--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,6 +7,7 @@
 	"author": "",
 	"main": "index.tsx",
 	"types": "index.tsx",
+	"type": "module",
 	"scripts": {
 		"lint": "eslint .",
 		"typecheck": "tsc --noEmit"
@@ -82,8 +83,10 @@
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
+		"@coursebuilder/eslint-config": "workspace:*",
 		"@types/react": "19.2.7",
 		"@types/react-dom": "19.2.3",
-		"@types/react-gravatar": "^2.6.13"
+		"@types/react-gravatar": "^2.6.13",
+		"typescript": "5.4.5"
 	}
 }
