--- a/apps/just-react/package.json
+++ b/apps/just-react/package.json
@@ -147,6 +147,7 @@
 		"json-schema": "^0.4.0",
 		"liquidjs": "^10.16.3",
 		"lucide-react": "^0.288.0",
+		"mdast-util-to-string": "^4.0.0",
 		"memoize-one": "^6.0.0",
 		"mjml": "^4.15.3",
 		"motion": "^12.23.25",
@@ -187,7 +188,9 @@
 		"reading-time": "^1.5.0",
 		"rehype-raw": "^7.0.0",
 		"rehype-slug": "^6.0.0",
+		"remark": "^15.0.1",
 		"remark-gfm": "^4.0.0",
+		"remark-mdx": "^3.1.1",
 		"resend": "^3.2.0",
 		"sanitize-html": "^2.13.0",
 		"schema-dts": "^1.1.2",
@@ -203,6 +206,7 @@
 		"typesense": "^1.8.2",
 		"typesense-instantsearch-adapter": "^2.9.0",
 		"unified": "^11.0.5",
+		"unist-util-visit": "^5.0.0",
 		"uploadthing": "7.4.4",
 		"uuid": "^9.0.1",
 		"y-codemirror.jh": "0.3.2-joel-fork",
@@ -225,6 +229,7 @@
 		"@types/eslint": "^9.6.1",
 		"@types/js-cookie": "^3.0.6",
 		"@types/json-schema": "^7.0.14",
+		"@types/mdast": "^4.0.3",
 		"@types/node": "^20.12.5",
 		"@types/pluralize": "^0.0.33",
 		"@types/react": "19.2.7",
