chore(tuis): tweaks

--- a/apps/tuis-dev/.env.development
+++ b/apps/tuis-dev/.env.development
@@ -1,14 +1,14 @@
 ## 🛠️ DEVELOPMENT 🛠️ ##
 
 # General Metadata
-NEXT_PUBLIC_APP_NAME=code-with-antonio
-NEXT_PUBLIC_SITE_TITLE="Code with Antonio"
-NEXT_PUBLIC_SUPPORT_EMAIL=team@codewithantonio.com
-NEXT_PUBLIC_PARTNER_FIRST_NAME=Antonio
-NEXT_PUBLIC_PARTNER_LAST_NAME="Code with Antonio"
-NEXT_PUBLIC_PARTNER_TWITTER=YTCodeAntonio
-NEXT_PUBLIC_SEO_KEYWORDS="AI, artificial intelligence, typescript, LLM, large language model, prompt engineering, prompt engineering for developers"
-NEXT_PUBLIC_PRODUCT_DESCRIPTION="Build something great!"
+NEXT_PUBLIC_APP_NAME=tuis-dev
+NEXT_PUBLIC_SITE_TITLE="TUIs.dev"
+NEXT_PUBLIC_SUPPORT_EMAIL=team@tuis.dev
+NEXT_PUBLIC_PARTNER_FIRST_NAME=Ashley
+NEXT_PUBLIC_PARTNER_LAST_NAME="Hindle"
+NEXT_PUBLIC_PARTNER_TWITTER="ashleyhindle"
+NEXT_PUBLIC_SEO_KEYWORDS="terminal, ui, tui, terminal ui, terminal ui design, terminal ui development, terminal ui library, terminal ui framework, terminal ui components, terminal ui design patterns, terminal ui design principles, terminal ui design guidelines, terminal ui design best practices"
+NEXT_PUBLIC_PRODUCT_DESCRIPTION="Build Beautiful Terminal UIs"
 
 # App Features
 CREATE_USER_ON_LOGIN=true
